# Http-GUI

./: CMakeLists.txt  DummyClient.html  DummyServer.cpp
.github/workflows/: runTests.yml
Lib/: CMakeLists.txt
Lib/header/: JSONstream.h  Request.h  RequestOptions.h
Lib/src/: JSONstream.cpp  Request.cpp  RequestOptions.cpp
src/: CMakeLists.txt
src/header/HttpGui/: BadResponse.h  Definitions.h  Request.h  RequestOptions.h  Server.h
src/src/: BadResponse.cpp  Request.cpp  Server.cpp  ServerLogger.cpp  ServerLogger.h  StringMerger.h
tests/: CMakeLists.txt  RequestFieldTest.cpp  RequestJsonConversionTest.cpp
